# test_Ubiquitous

./: README.md  robowler.axmz
Batch/: Kobuki.xml  Kobuki_Dyna.xml  Robowler.xml
Dynamixel_sim/Dynamixel-master/: .project  CMakeLists.txt  Dynamixel.bat  Dynamixel.conf  README.Dynamixel  README.md  RTC.xml  rtc.conf
Dynamixel_sim/lib/: dxl_x64_cpp.exp  dxl_x64_cpp.lib
FloatSeqToVelocity/: CMakeLists.txt  FloatSeqToVelocity.conf  README.md  RTC.xml  RTC.xml20240624194531  rtc.conf
FloatSeqToVelocity/cmake/: floatseqtovelocity-config.cmake.in
FloatSeqToVelocity/doc/: conf.py.in
FloatSeqToVelocity/include/: CMakeLists.txt
FloatSeqToVelocity/src/: CMakeLists.txt  FloatSeqToVelocity.cpp  FloatSeqToVelocityComp.cpp
Master/: CMakeLists.txt  Master.conf  README.md20240708153546  RTC.xml  RTC.xml20240708153553  rtc.conf
Master/cmake/: master-config.cmake.in
Master/src/: Master.cpp  Master.cpp20240708153537  MasterComp.cpp
MasterRTC/: CMakeLists.txt  README.md  RTC.xml20240703151548
MasterRTC/doc/: conf.py.in
MasterRTC/include/: CMakeLists.txt
MasterRTC/src/: CMakeLists.txt  Master.cpp  SendMotorMotion.cpp
RealsenseRGBD/: .appveyor.yml  .editorconfig  .project  CMakeLists.txt  README.md  README.md20240626161233  README.md20240626213806  README.md20240626220300  RTC.xml20240626220211  RTC.xml20240626220244  RealSense_RGBD_Camera.conf  RealSense_RGBD_Camera.conf20240626161237  RealSense_RGBD_Camera.conf20240626213807  RealSense_RGBD_Camera.conf20240626220302  rtc.conf
RealsenseRGBD/cmake/: realsense_rgbd_camera-config.cmake.in
RealsenseRGBD/doc/: conf.py.in
RealsenseRGBD/idl/: RealSenseConfig.idl
RealsenseRGBD/include/: CMakeLists.txt
RealsenseRGBD/src/: CMakeLists.txt  CMakeLists.txt.old  FindRealSense2.cmake  RealSense_RGBD_Camera.cpp  RealSense_RGBD_Camera.cpp20240626152538  RealSense_RGBD_Camera.cpp20240626161202  RealSense_RGBD_Camera.cpp20240626213753  RealSense_RGBD_Camera.cpp20240626220256  RealSense_RGBD_CameraComp.cpp
SerialReceiverRTC/: SerialReceiver.pde
SerialReceiverRTC/SerialReceiver/: SerialReceiver.pde
YOLOv8_Detection/: .appveyor.yml  .gitattributes  .gitignore  .project  CMakeLists.txt  README.md  RTC.xml  YOLOv8_Detection.conf  rtc.conf
YOLOv8_Detection/cmake/: yolov8_detection-config.cmake.in
YOLOv8_Detection/doc/: conf.py.in
YOLOv8_Detection/include/: CMakeLists.txt
YOLOv8_Detection/src/: CMakeLists.txt  FindOnnxRuntime.cmake  SetReferences.cmake  YOLOv8_Detection.cpp  YOLOv8_DetectionComp.cpp  packages.config
cal_inverse_kinematics/: .appveyor.yml  .project  CMakeLists.txt  README.md  RTC.xml  RTC.xml20240703150301  cal_inverse_kinematics.conf  rtc.conf
cal_inverse_kinematics/cmake/: cal_inverse_kinematics-config.cmake.in
cal_inverse_kinematics/doc/: conf.py.in
cal_inverse_kinematics/include/: CMakeLists.txt
cal_inverse_kinematics/include/cal_inverse_kinematics/: CMakeLists.txt  basic_function.h  cal_3motor_ik.h  cal_4motor_ik.h  cal_inverse_kinematics.h  operate_motor.h  template.h
cal_inverse_kinematics/src/: CMakeLists.txt  basic_funtion.cpp  cal_3motor_ik.cpp  cal_4motor_ik.cpp  cal_inverse_kinematics.cpp  cal_inverse_kinematics.txt  cal_inverse_kinematicsComp.cpp  cal_inverse_kinematics_ver2.txt  operate_motor.cpp  template.cpp
sender/: .appveyor.yml  .project  CMakeLists.txt  README.md  RTC.xml  RTC.xml20240626212725  rtc.conf  sender.conf
sender/cmake/: sender-config.cmake.in
sender/doc/: conf.py.in
sender/include/: CMakeLists.txt
sender/src/: CMakeLists.txt  sender.cpp  senderComp.cpp
(+115 files in other folders)
