add_subdirectory(cal_inverse_kinematics)

MAP_ADD_STR(hdrs "${PROJECT_NAME}/" headers)
set(headers ${headers} PARENT_SCOPE)

MAP_ADD_STR(hdrs_1 "${PROJECT_NAME}/" headers_1)
set(headers_1 ${headers_1} PARENT_SCOPE)

MAP_ADD_STR(hdrs_2 "${PROJECT_NAME}/" headers_2)
set(headers_2 ${headers_2} PARENT_SCOPE)

MAP_ADD_STR(hdrs_3 "${PROJECT_NAME}/" headers_3)
set(headers_3 ${headers_3} PARENT_SCOPE)

MAP_ADD_STR(hdrs_4 "${PROJECT_NAME}/" headers_4)
set(headers_4 ${headers_4} PARENT_SCOPE)
